--- a/espsem.pug
+++ b/espsem.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title surface semantique
+    title = word
     script(src="jquery.js")
     link(rel="stylesheet" type="text/css" href="style.css")
     script(type="text/javascript" src="paper-full.js")
