--- a/views/espsem.pug
+++ b/views/espsem.pug
@@ -37,7 +37,10 @@ html
         #Showalllinks
           | Montrer tout les Liens : 
           input#showalllink(type="checkbox")
-      input#word(type="text" value='word')
+        #ShowallAreas
+          | Montrer toutes les enveloppes : 
+          input#showallAreas(type="checkbox")
+      input#word(type="text" value= word)
       #SelectTool
         | Navigation
         select#Tool
