--- a/views/espsem.pug
+++ b/views/espsem.pug
@@ -63,4 +63,4 @@ html
         input#word(type="text" value= word)
       
     canvas#canvas
-    script(type="text/javascript" src="espsem.js")
+    script(type="text/javascript" src="espsemClient.js")
