--- a/espsem.pug
+++ b/espsem.pug
@@ -46,4 +46,4 @@ html
           option(value="zoomOut") dézoomer
           option(value="Move") déplacer
     canvas#canvas
-    script(type="text/javascript" src="espsem.js")
+    script(type="text/javascript" src="espsemClient.js")
