--- a/views/espsem.pug
+++ b/views/espsem.pug
@@ -22,7 +22,7 @@ html
         #clilist
     #ui
       button(id="centerview")
-        | center view
+        | Centrer le Graphique
       button(id="helpbutton")
         | help
       #Select
