Revert "Merge remote-tracking branch 'refs/remotes/origin/espsemnewUI'"
This reverts commit e6a0d39576c6fde478e5bd9676e3eef35e6a2d0a, reversing
changes made to 0c1efb2cd9731ec571cc200d31a6b2a556205cbe.

--- a/public/style.css
+++ b/public/style.css
@@ -7,72 +7,50 @@ body{
 
 #canvas{
 	position: absolute;
-	left:0%;
-	top: 0%;
-	height: 100%;
-	width: 100%;
+	left:26%;
+	top: 15%;
 	padding: 0;
 	margin: 0;
 
 }
-#axe1{
-	position: absolute;
-	font-size: 1.5em;
-	border-color: hsla(0,0%,0%, 0);
-	visibility: hidden;
-	background:none;
 
-}
-#axe2{
+#ui{
 	position: absolute;
-	font-size: 1.5em;
-	border-color: hsla(0,0%,0%, 0);
-	visibility: hidden;
-	background:none;
+	width: 75%;
+	height: 14%;
+	left: 25%;
+	top:0;
+	padding: 0;
+	margin: 0;
+	border-bottom: 3px solid black;
+	border-left: 1px solid;
 }
-
-#zoomIn{
+#Select{
 	position: absolute;
-	right: 3%;
-	bottom : 10%;
-	border-style : solid;
-	border-width: 1px;
-	border-color: hsla(0,0%,0%,0);	
-	width: 30px;
-	height: 30px;
-	background-size: contain;
-	background-image: url("icons/zoomIn.png");
+	left: 58%;
+	width: 25%;
+	height: 90%;
+	top:5%;
 }
-
-#zoomOut{
+#SelectXAxis{
 	position: absolute;
-	right: 3%;
-	bottom : 5%;
-	border-style : solid;
-	border-width: 1px;
-	border-color: hsla(0,0%,0%,0);	
-	width: 30px;
-	height: 30px;
-	background-size: contain;
-	background-image: url("icons/zoomOut.png");
+	top:0%;
+	right:0%;
+	padding-right: 25%;
+}
+#SelectYAxis{
+	position: absolute;
+	top:33%;
+	right:0%;
+	padding-right: 25%;
 }
 
-#resetView{
+#SelectTool{
 	position: absolute;
-	right: 3%;
-	bottom : 15%;
-	border-style : solid;
-	border-width: 1px;
-	border-color: hsla(0,0%,0%,0);	
-	width: 30px;
-	height: 30px;
-	background-size: contain;
-	background-image: url("icons/reset.png");
+	right: 0;
+	top:66%;
+	padding-right: 25%;
 }
-
-
-
-
 
 #Checkboxes{
 	position: absolute;
@@ -108,43 +86,36 @@ body{
 	padding-right: 25%;
 }
 
+
+
+
 #motvedette{
 	position: absolute;
-	width: 20%;
-	height: 10%;
-	left: 2%;
-	top:2%;
+	width: 33%;
+	height: 90%;
+	left: 25%;
+	top:5%;
 	font-size: 1.3em;
 	border: 1px solid gray;
-	border-color: hsla(0,0%,0%, 0);
-	padding-top: 5px;
-	padding-left: 5px;
+	text-align: center;
+	
 }
-
-#motvedette > p{
-	margin: 0;
-	color: hsla(0,0%,0%, 0.2);
-}
-
 #word{
+
 	position: absolute;
-	bottom: 10%;
-	left: 0%;
 	width: 80%;
 	height: 50%;
+	left: 10%;
+	bottom:12%;
 	font-size: 2em;
-	border: 1px solid hsla(0,0%,0%, 0);
-	margin-left: 10%;
-	margin-right: 10%;
-	padding-left: 5%;
-	background:none; 
+	text-align: center;
 }
 
 
 #lists{
 	position: absolute;
 	width: 25%;
-	height: 95%;
+	height: 100%;
 	top:0;
 	padding: 0;
 	margin: 0;
@@ -248,7 +219,14 @@ body{
 	font-size: 2em;
 }
 
-
+p{
+	position: absolute;
+	width: 100%;
+	bottom: 50%;
+	text-align: center;
+	margin: 0;
+	padding-top: 10%;
+}
 
 #help{
 	position: fixed;
@@ -266,19 +244,7 @@ body{
 }
 
 #helpbutton{
-	visibility: visible;
-	position: fixed;
-	top : 3%;
-	right : 2%;
-	width: 5%;
-	text-align: center;
-	height: 5%;
-	font-size: 2em;
-	background:none;
-	border:none;
-	
-	
-
+	visibility: hidden;
 }
 
 #centerview{
