--- a/public/style.css
+++ b/public/style.css
@@ -72,42 +72,6 @@ body{
 
 
 
-
-
-#Checkboxes{
-	position: absolute;
-	width: 25%;
-	height: 90%;
-	left: 0%;
-	top:10%;
-}
-
-#ShowAreas{
-	position: absolute;
-	top:0%;
-	right: 0%;
-	padding-right: 25%;
-}
-#Showcli{
-	position: absolute;
-	top:25%;
-	right: 0%;
-	padding-right: 25%;
-}
-
-#Showalllinks{
-	position: absolute;
-	top:50%;
-	right: 0%;
-	padding-right: 25%;
-}
-#ShowallAreas{
-	position: absolute;
-	top:75%;
-	right: 0%;
-	padding-right: 25%;
-}
-
 #motvedette{
 	position: absolute;
 	width: 20%;
@@ -117,8 +81,7 @@ body{
 	font-size: 1.3em;
 	border: 1px solid gray;
 	border-color: hsla(0,0%,0%, 0);
-	padding-top: 5px;
-	padding-left: 5px;
+	
 }
 
 #motvedette > p{
@@ -127,17 +90,15 @@ body{
 }
 
 #word{
-	position: absolute;
-	bottom: 10%;
-	left: 0%;
+	position: relative;
+	margin-top: 10px;
 	width: 80%;
 	height: 50%;
 	font-size: 2em;
 	border: 1px solid hsla(0,0%,0%, 0);
-	margin-left: 10%;
-	margin-right: 10%;
-	padding-left: 5%;
+	padding-left: 10%;
 	background:none; 
+	
 }
 
 
@@ -270,21 +231,55 @@ body{
 	position: fixed;
 	top : 3%;
 	right : 2%;
-	width: 5%;
+	padding-left: 8px;
+	padding-right: 8px;
 	text-align: center;
-	height: 5%;
 	font-size: 2em;
 	background:none;
 	border:none;
+}
+
+#options{
+	position: fixed;
+	top : 15%;
+	right : 2%;
 	
-	
+	text-align: right;
+	font-size: 1em;
+	visibility: hidden;
+	background: none;
+	border: 1px solid hsla(0,0%,0%, 0.3);
+	padding: 10px;
+}
+
+#ShowAreas{
+	position: relative;
+}
+#Showcli{
+	position: relative;
 
 }
 
-#centerview{
-	position: absolute;
-	bottom : 50%;
-	right : 10%;
+#Showalllinks{
+	position: relative;
+
+}
+#ShowallArea{
+	position: relative;
+
+}
+
+#optionbutton{
+	visibility: visible;
+	position: fixed;
+	top : 8%;
+	right : 2%;
+	padding-left: 8px;
+	padding-right: 8px;
+	padding: 8px;
+	font-size: 1em;
+	background:none;
+	border:none;
 }
 
 
