--- a/views/espsem.pug
+++ b/views/espsem.pug
@@ -84,5 +84,9 @@ html
       p L'espace sémantique du DES est généré en 6 dimension, par défaut il apparait selon les axes les plus pertinents (axe 1 et 2), mais vous pouvez naviguer selon d'autres axes en cliquant sur leur numéro.
       p Le bouton "listes" en bas à gauche permet d'afficher la listes des synonymes du mot recherché ainsi que leur(s) clique(s).
       p Enfin, la barre de recherche en haut à gauche permet d'acceder à l'espace sémantique d'un nouveau mot.
+      p  
+      p Pour plus d'information concernant le DES (Dictionnaire Electronique des Synonymes) n'hésitez pas à consulter la présentation du DES sur ce lien : http://www.crisco.unicaen.fr/Presentation-du-dictionnaire.html
+      p Application développée par Arthur Baty (batyarthur@gmail.com) dans le cadre d'une prestation de service.
+      p Contact CRISCO : Laurette.chardon@unicaen.fr
       
     script(type="text/javascript" src="espsemClient.js")
