--- a/views/espsem.pug
+++ b/views/espsem.pug
@@ -74,17 +74,23 @@ html
     
     #help
       p Cette page permet d'explorer des visualisations 2D de l'espace sémantique d'un mot  ; les mots sont disposés sur le plan selon leur sens.
+      p _
       p La taille d'un point correspond à son importance dans l'univers sémantique du mot recherché ; un point de grande taille a beaucoup de synonymes en commun avec le "mot vedette".
+      p _
       p Vous pouvez vous déplacer dans le plan par cliquer-déplacer, zoomer avec la molette de votre souris ou avec les boutons en bas à droite.
+      p _
       p Le bouton "options" en haut à droite permet d'accéder à plusieurs options :
-      p Montrer les cliques : affiche les cliques (en bleu) sur le plan, les cliques regroupent les mots synonymes entre eux.
+      p Montrer les cliques : affiche les cliques (en bleu) sur le plan, les cliques regroupent les mots synonymes entre eux. L’intérêt des cliques est qu’elles sont plus proches des concepts que les mots, car elles neutralisent partiellement la polysémie de ceux-ci, ne retenant idéalement qu’un sens donné, commun à tous les mots de la clique. 
       p Montrer tout les liens : affiche les liens entre les mots et leur(s) clique(s).
       p Montrer les enveloppes : permet l'affichage des enveloppes sur le plan lorsqu'on interagit avec un mot, l'enveloppe entoure les cliques associées à ce mot, elle délimite ainsi une "zone sémantique" correspondant à ce mot.
       p Montrer toutes les enveloppes : affiche toutes les enveloppes sur le plan.
+      p _
       p L'espace sémantique du DES est généré en 6 dimension, par défaut il apparait selon les axes les plus pertinents (axe 1 et 2), mais vous pouvez naviguer selon d'autres axes en cliquant sur leur numéro.
+      p _
       p Le bouton "listes" en bas à gauche permet d'afficher la listes des synonymes du mot recherché ainsi que leur(s) clique(s).
+      p _
       p Enfin, la barre de recherche en haut à gauche permet d'acceder à l'espace sémantique d'un nouveau mot.
-      p  
+      p _
       p Pour plus d'information concernant le DES (Dictionnaire Electronique des Synonymes) n'hésitez pas à consulter la présentation du DES sur ce lien : http://www.crisco.unicaen.fr/Presentation-du-dictionnaire.html
       p Application développée par Arthur Baty (batyarthur@gmail.com) dans le cadre d'une prestation de service.
       p Contact CRISCO : Laurette.chardon@unicaen.fr
