--- a/views/espsem.pug
+++ b/views/espsem.pug
@@ -5,6 +5,7 @@ html
     title= "Espace Sémantique"
     script(src="jquery.js")
     link(rel="stylesheet" type="text/css" href="style.css")
+    link(rel="stylesheet" type="text/css" href="normalize.css")
     script(type="text/javascript" src="paper-full.js")
     script(type="text/javascript" src="grahamScan.js")
   body
@@ -85,11 +86,11 @@ html
       p Montrer les enveloppes : permet l'affichage des enveloppes sur le plan lorsqu'on interagit avec un mot, l'enveloppe entoure les cliques associées à ce mot, elle délimite ainsi une "zone sémantique" correspondant à ce mot.
       p Montrer toutes les enveloppes : affiche toutes les enveloppes sur le plan.
       p _
-      p L'espace sémantique du DES est généré en 6 dimension, par défaut il apparait selon les axes les plus pertinents (axe 1 et 2), mais vous pouvez naviguer selon d'autres axes en cliquant sur leur numéro.
+      p L'espace sémantique du DES est généré en 6 dimensions, par défaut il apparait selon les axes les plus pertinents (axe 1 et 2), mais vous pouvez naviguer selon d'autres axes en cliquant sur leur numéro.
       p _
       p Le bouton "listes" en bas à gauche permet d'afficher la listes des synonymes du mot recherché ainsi que leur(s) clique(s).
       p _
-      p Enfin, la barre de recherche en haut à gauche permet d'acceder à l'espace sémantique d'un nouveau mot.
+      p Enfin, la barre de recherche en haut à gauche permet d'accéder à l'espace sémantique d'un nouveau mot.
       p _
       p Pour plus d'information concernant le DES (Dictionnaire Electronique des Synonymes) n'hésitez pas à consulter la présentation du DES sur ce lien : http://www.crisco.unicaen.fr/Presentation-du-dictionnaire.html
       p Application développée par Arthur Baty (batyarthur@gmail.com) dans le cadre d'une prestation de service.
